# BMC_OpenGL

./: BMC_OpenGL.code-workspace  CMakeLists.txt  README.md
Lib/inc/glad/: glad.h
Lib/inc/stb/: stb_image.h
Lib/src/: CMakeLists.txt  glad.c
MainProject/inc/: Camera.h  Camera.hpp  EBO.hpp  Object.hpp  Texture.h  Texture.hpp  VAO.hpp  VBO.hpp  shaderClass.hpp  vars.h
MainProject/src/: CMakeLists.txt  Camera.cpp  EBO.cpp  Object.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  player.cpp  shaderClass.cpp
